Integrated updates